# Hackaton2026

./: .gitignore  Codex.md  PROJECT_STATUS.md  README.md  pipeline_execution_guide.md  pyproject.toml  requirements.txt
data/reports/: anomaly_research_plan.md  dataset_structure_report.md  implementation_roadmap.md
outputs/contrastive/medium_20260715_161821/: metrics.jsonl  report_test2048.md  report_val2048.md  summary.json
outputs/contrastive/titae_debug_20260715_150747/: report_val32.md  summary.json
project/configs/: default.yaml
project/configs/contrastive/: default.yaml
project/configs/downstream/: crossmodal.yaml
project/reports/: contrastive_hpo_20260720.md  contrastive_progress_report.md  contrastive_run_summary.csv  contrastive_run_summary.md
project/scripts/: contrastive_smoke.py  diagnose_embeddings.py  evaluate_downstream_anomalies.py  export_contrastive_embeddings.py  inspect_data.py  ranking_diagnostics.py  report_contrastive_run.py  ssl_smoke.py  summarize_contrastive_runs.py  train_contrastive.py  train_crossmodal_mapper.py
project/scripts/sh/: _python.sh  check_remote.sh  diagnose_embeddings.sh  dry_run_data.sh  evaluate_downstream_anomalies.sh  export_contrastive_embeddings.sh  run_contrastive.sh  (+9 more)
project/src/: __init__.py
tests/: test_contrastive_report.py  test_contrastive_smoke.py  test_contrastive_trainer_config.py  test_crossmodal_mapper.py  test_data_access.py  test_downstream_anomalies.py  test_embedding_diagnostics.py  test_ranking_diagnostics.py  test_retrieval_metrics.py  test_ssl_smoke.py  test_summarize_contrastive_runs.py
(+245 files in other folders)
