[project]
name = "hackaton2026"
version = "0.1.0"
description = "Multimodal galaxy image-spectrum representation learning and anomaly research."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "h5py>=3.10",
    "hydra-core>=1.3",
    "matplotlib>=3.8",
    "numpy>=1.26,<2.2",
    "omegaconf>=2.3",
    "pandas>=2.0",
    "pypdf>=4.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
]

[dependency-groups]
experiment = [
    "lightning>=2.3",
    "mlflow>=2.14",
    "optuna>=3.6",
    "ray[tune]>=2.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
viz = [
    "umap-learn>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
